# pyshiny-workshop

./: .gitignore  .nojekyll  _quarto.yml  import-helpers.html  import-helpers.qmd  index.html  index.qmd  requirements.txt  robots.txt  search.json  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
comparisons/: README.md
comparisons/dash_vs_shiny/: app1_dash.py  app1_shiny.py  app1_shiny_core.py
comparisons/reflex_vs_shiny/: README.md  app_shiny.py  pyproject.toml  rxconfig.py
comparisons/reflex_vs_shiny/reflex_vs_shiny/: reflex_vs_shiny.py
docs/: getting-started.html  reactive-side-effects.html  reactivity.html  ui-customization.html
example_datascience_project/: README.md  pyproject.toml
example_datascience_project/example_datascience_project/: model.py  serialization.py
example_datascience_project/notebooks/: 01_run_model.html  01_run_model.ipynb
example_datascience_project/scripts/: 01_run_model.py
example_datascience_project/tests/unit/: test_model.py
exercises/: 1-hello-world.html  10-layout.html  11-value-boxes.html  12-dynamic-ui.html  13-ui-functions.html  14-extract-functions.html  2-debug.html  2-debug.qmd  3-add-filter.html  4-add-plot.html  5-reactivity.html  6-reactive-event.html  7-reactive-effects.html  8-navsets.html  9-cards.html
slides/: getting-started.html  getting-started.qmd  modern-pythonic-toolkit.html  modern-pythonic-toolkit.qmd  reactivity.html  reactivity.qmd  ui-customization.html  ui-customization.qmd  workflow-best-practices.html  workflow-best-practices.qmd
(+37 files in other folders)
